traefik/ingress-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-route
  namespace: jenkins
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jenkins.flakeide.com`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flakeide-fe-route
  namespace: flakeide-fe
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`fe.flakeide.com`)
      kind: Rule
      services:
        - name: flakeide-fe
          port: 3000
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flakeide-be
  namespace: flakeide-be
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`be.flakeide.com`)
      kind: Rule
      services:
        - name: flakeide-be
          port: 8081
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: container-server
  namespace: container-server
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`container.flakeide.com`)
      kind: Rule
      services:
        - name: container-server
          port: 50051
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ide-user1course1
  namespace: ide
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`dXNlcjFjb3Vyc2Ux.flakeide.com`)
      kind: Rule
      services:
        - name: ide-user1course1
          port: 8080
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: postgres
  namespace: postgres
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`db.flakeide.com`)
      kind: Rule
      services:
        - name: postgres
          port: 5432
  tls:
    certResolver: myresolver
